# OZ-accounts-policy-builder-

./: .env.example  .gitignore  Cargo.toml  README.md  TECHNICAL_SPEC.md  TESTER-GUIDE.md  jest.config.json  package-lock.json  package.json  tsconfig.base.json
contracts/policies/call-filter/: Cargo.toml
contracts/policies/call-filter/src/: lib.rs
contracts/policies/call-filter/test_snapshots/tests/: allow_matching_call.1.json  amount_max_constraint_enforced.1.json  deny_unlisted_call.1.json  deny_unlisted_contract.1.json  exact_address_constraint_enforced.1.json
contracts/policies/composite/: Cargo.toml
contracts/policies/composite/src/: lib.rs
contracts/policies/composite/test_snapshots/tests/: enforce_cascades_to_all_subs.1.json  uninstall_removes_config.1.json
contracts/policies/frequency-limit/: Cargo.toml
contracts/policies/frequency-limit/src/: lib.rs
contracts/policies/frequency-limit/test_snapshots/tests/: allows_up_to_limit.1.json  get_state_tracks_count.1.json  resets_after_window.1.json
contracts/policies/spending-limit/: Cargo.toml
contracts/policies/spending-limit/src/: lib.rs
contracts/policies/spending-limit/test_snapshots/tests/: enforce_rejects_over_limit.1.json  install_and_basic_enforce.1.json  (+3 more)
contracts/policies/time-bound/: Cargo.toml
contracts/policies/time-bound/src/: lib.rs
contracts/shared/policy-trait/: Cargo.toml
contracts/shared/policy-trait/src/: lib.rs
contracts/test-fixtures/mock-account/: Cargo.toml
contracts/test-fixtures/mock-account/src/: lib.rs
contracts/test-fixtures/mock-token/: Cargo.toml
contracts/test-fixtures/mock-token/src/: lib.rs
demo/: run-demo.sh
docs/: architecture.md
docs/walkthroughs/: blend-yield-claim.md  sep41-subscription.md  soroswap-delegation.md
tests/fixtures/: blend-yield-claim.json  sep41-subscription.json
tests/synthesizer/: analyzer.test.ts  codegen.test.ts  mutator.test.ts
(+4 files in other folders)
